# mjml-python

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mjml.pyi  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  release.yml
src/: lib.rs
tests/: test_main.py  test_mjml2html.py
tests/files/: case1_result.html
tests/fixtures/: test_file.mjml
