[package]
name = "mjml-python"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mjml"
crate-type = ["cdylib"]

[dependencies]
mrml = "2.0.0-rc3"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
