[package]
name = "mjml-python"
version = "1.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mjml"
crate-type = ["cdylib"]

[dependencies]
mrml = "3.0.0"
pyo3 = { version = "0.19.0", features = ["abi3-py37", "extension-module"] }
